solve overflow issues on Firefox

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -104,6 +104,7 @@ img {
 }
 
 /* Overflow issue */
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
